--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -33,6 +33,13 @@
                     // padding-right: 0;
                 }
 
+                &:first-child {
+                    @media (max-width: 991px) {
+                        padding-left: 0;
+                    }
+                }
+
+
                 span.text {
                     font-size: 0.813em;
                 }
@@ -112,6 +119,12 @@
         @media (max-width: 991px) {
             display: none;
         }
+
+        &.top-date-time {
+            @media (max-width: 991px) {
+                display: block;
+            }
+        }
     }
 
     .navbar-toggler {
@@ -135,7 +148,7 @@
 
         @media (max-width: 991px) {
             padding: 0px;
-            display: block;
+            display: none;
 
         }
     }
@@ -193,6 +206,7 @@
 
     @media (max-width: 991px) {
         position: relative;
+        top: 0;
     }
 
     &:before {
@@ -546,11 +560,11 @@
 
 }
 
-.header-top-skipwrap.top-date-time {
-    background: $white;
-    border-radius: 26px;
-    padding: 5px 0;
-}
+// .header-top-skipwrap.top-date-time {
+//     background: $white;
+//     border-radius: 26px;
+//     padding: 5px 0;
+// }
 
 /* Font Slider */
 
@@ -933,7 +947,7 @@ button.text-increment-btn {
     }
 
     .nav-tabs .nav-link {
-        color:#212121;
+        color: #212121;
         transition: all 0.3s ease-in-out;
         font-weight: 600;
         font-size: 14px;
@@ -947,5 +961,38 @@ button.text-increment-btn {
     }
 
     // .nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover{border-radius: 20px;}
+}
+
+@media (max-width: 991px) {
+    .site-header .logo-wrap img {
+        height: auto;
+        width: 162px;
+    }
+
+    button.header-dropdown-btn {
+        position: absolute;
+        top: 18px;
+        right: 10px;
+        font-size: 12px;
+        padding: 8px 9px;
+
+        img {
+            height: 20px !important;
+            width: auto !important;
+        }
+    }
+
+    .menu-switch-tab {
+        border-radius: 12px;
+        margin: 10px 0;
+    }
+
+    .menu-switch-tab .nav-tabs .nav-link {
+        font-size: 12px;
+        padding: 7px 10px;
+        border-color: var(--bs-nav-tabs-link-hover-border-color);        
+    }
+
+    .menu-switch-tab .nav-tabs .nav-item:not(:last-child){margin-bottom: 8px;}
 
 }
