--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,7 @@
 @import "./_icon.scss";
 @import "./fonts.scss";
 @import "./variables.scss";
+
 html {
     scroll-behavior: smooth;
 }
@@ -11,6 +12,7 @@ body {
     font-size: 16px;
     overflow-x: hidden;
 }
+
 a {
     cursor: pointer;
 }
@@ -632,7 +634,10 @@ ul {
 }
 
 @media (max-width: 1199px) and (min-width:995px) {
-    .site-header .navbar .navbar-nav .nav-item a{padding: 8px 10px;font-size: 0.75em;}
+    .site-header .navbar .navbar-nav .nav-item a {
+        padding: 8px 10px;
+        font-size: 0.75em;
+    }
 }
 
 @media (max-width: 991px) and (min-width:768px) {
@@ -658,31 +663,46 @@ ul {
     .common-banner-desc {
         font-size: .8em;
     }
+
     .same-width {
         width: 130px;
     }
 
-    .h2, h2 {
+    .h2,
+    h2 {
         font-size: calc(1.2rem + .9vw);
     }
-    .school-container .heading-blue{font-size: 1.2em;}
-    .school-container .basic-information .information-title p{font-size: 12px;}
-    .school-container .basic-information .information-title p span.information-span{font-size: 13px;}
+
+    .school-container .heading-blue {
+        font-size: 1.2em;
+    }
+
+    .school-container .basic-information .information-title p {
+        font-size: 12px;
+    }
+
+    .school-container .basic-information .information-title p span.information-span {
+        font-size: 13px;
+    }
+
     .school-container .basic-information .information-title.tilte-disply-align p span.information-span {
         width: calc(100% - 130px);
         word-wrap: break-word;
     }
 
-    .basic-information-profile .profile{
+    .basic-information-profile .profile {
         padding: 12px 20px;
     }
+
     .desc-black {
         font-size: 13px !important;
     }
+
     .btn {
         padding: 5px 5px;
         font-size: 0.8em;
     }
+
     .hero-banner .hero-banner-img {
         padding: 0 !important;
         margin: 0px 0;
@@ -692,7 +712,11 @@ ul {
         width: 50px;
         height: 50px;
     }
-    .pgicategory-card-heading{font-size: .8em;}
+
+    .pgicategory-card-heading {
+        font-size: .8em;
+    }
+
     ul.bullet-points li {
         margin-left: 15px;
         font-size: 12px;
@@ -704,39 +728,61 @@ ul {
     }
 
     .pb-5 {
-        padding-bottom: 1rem!important;
+        padding-bottom: 1rem !important;
     }
+
     .portfolio .portfolio-flters li button.nav-link {
         padding: 10px 24px;
     }
+
     .portfolio .portfolio-wrap .portfolio-info h4 {
         font-size: 15px;
         padding-right: 0px;
     }
-    .site-footer-top .footer-links-heading{font-size: 1em;}
-    .site-footer-top .footer-links ul li a{font-size: 0.65em;}
-    .material-icons-round{font-size: 16px;}
+
+    .site-footer-top .footer-links-heading {
+        font-size: 1em;
+    }
+
+    .site-footer-top .footer-links ul li a {
+        font-size: 0.65em;
+    }
+
+    .material-icons-round {
+        font-size: 16px;
+    }
+
     .site-footer-top .footer-desc p {
         font-size: 0.6em;
         line-height: 1.5;
         padding-bottom: 12px;
     }
+
     .site-footer-top .footer-logo {
         margin-bottom: 12px;
         width: 156px;
     }
-    .advance-search-container .advance-search-input select{padding: 5px 10px;}
-    .state-card-top.card-details{padding: 10px 15px;}
+
+    .advance-search-container .advance-search-input select {
+        padding: 5px 10px;
+    }
+
+    .state-card-top.card-details {
+        padding: 10px 15px;
+    }
+
     .state-card-top.card-details .state-card-title {
         font-size: 0.6em;
         word-break: break-word;
         padding-left: 10px;
     }
+
     .state-card-top.card-details img {
         width: 30px;
         height: 30px;
         margin-right: 25px;
     }
+
     h2.heading-blue.school-name {
         font-size: 1.1em;
     }
@@ -744,10 +790,12 @@ ul {
     .advance-search-container.school-btn-b .btn-wrap .btn-solid {
         padding: 7px 5px;
     }
+
     li.school-sub-h {
         font-size: 12px;
     }
-    span.highlited-text{
+
+    span.highlited-text {
         font-size: 13px;
     }
 
@@ -756,17 +804,29 @@ ul {
         text-align: center;
         width: 100%;
     }
-    .print-icon-box .backbuttondata{margin-top: 0px;}
+
+    .print-icon-box .backbuttondata {
+        margin-top: 0px;
+    }
+
     .school-information .col-20 {
         width: 25%;
     }
+
     .Infrastructure .profile-text .image-box {
         height: 65px;
         width: 65px;
         padding: 12px;
     }
-    .Infrastructure .profile-text .studentNumber{font-size: 11px;}
-    .school-information .profile-text{min-height: 95px;}
+
+    .Infrastructure .profile-text .studentNumber {
+        font-size: 11px;
+    }
+
+    .school-information .profile-text {
+        min-height: 95px;
+    }
+
     .school-information .profile-text p {
         line-height: 20px;
         font-size: 14px;
@@ -778,8 +838,94 @@ ul {
 }
 
 
-@media (min-width: 1400px){
-.container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-    max-width: 1500px;
-}}
+@media (min-width: 1400px) {
 
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl,
+    .container-xxl {
+        max-width: 1500px;
+    }
+}
+
+
+
+@media (min-width: 1600px) {
+    .site-header {
+        top: 35px !important;
+    }
+}
+
+// @media (min-width: 1270px) {}
+
+@media (max-width:1350px)  and (min-width: 1024px) {
+
+    .site-header{top: 32px;}
+    .header-top-skipwrap ul li a,
+    .header-top-skipwrap ul li span.text {
+        font-size: 0.7em !important;
+    }
+    .site-header .logo-wrap{padding: 12px 0 14px;}
+    .header-dropdown-btn {
+        font-size: 12px;
+        padding: 10px 12px;
+    }
+    .logo-wrap a img {
+        width: 200px;
+    }
+    .header-top-skipwrap ul li:first-child{padding-left: 0px;}
+    .menu-switch-tab .nav-tabs .nav-link{font-size: 12px;padding: 7px 10px;}
+    .mapindia img {
+        width: 87%;
+    }
+    .right-card-sec .srid-card-se .card-box .sub-text-c, .right-card-sec .card-box-impact .impact-box-content span.sub-text-c {
+        font-size: 12px;
+    }
+    .right-card-sec .srid-card-se .card-box .main-text-c.m-big {
+        font-size: 24px;
+    }
+    .right-card-sec .card-box-impact .impact-box-content .main-text-c{font-size: 11px;}
+    .right-card-sec .srid-card-se .card-box .main-text-c{margin-bottom: 10px;}
+    .right-card-sec .srid-card-se .card-box .main-text-c, .right-card-sec .card-box-impact .impact-box-content .main-text-c.m-big {
+        font-size: 14px;
+    }
+    .right-card-sec .srid-card-se .card-box img.card-img {
+        position: absolute;
+        width: 45px;
+        height: 36px;
+        right: 11px;
+    }
+    .heading-sm{font-size: 26px;}
+    .right-card-sec .card-box-impact .impact-box-content img.card-img-impact {
+        position: absolute;
+        bottom: 10px;
+        right: 15px;
+        height: 45px;
+    }
+    .card-box-impact .col-md-4 {
+        padding: 0 8px;
+    }
+    .right-card-sec .card-box-impact .impact-box-content .img-multi-box img {
+        height: 35px;
+    }
+    .right-card-sec .card-box-impact .impact-box-content .img-multi-box .big-img {
+        height: 45px;
+    }
+    .right-card-sec .card-box-impact .impact-box-content-education .heading-sm {
+        font-size: 20px;
+    }
+    .heading-blue{font-size: 2em;}
+    .tab-for-graph .nav-tabs .nav-link{margin-bottom: 8px;}
+    .right-card-sec .srid-card-se.school-dashboard img.school-graph-icon {
+        width: 145px;
+        right: 6%;
+        bottom: 0px;
+    }
+    .right-card-sec .srid-card-se.school-dashboard .card-box .col-md-6.mb-5 {
+        margin-bottom: 2.5rem !important;
+    }
+    .right-card-sec .srid-card-se.school-dashboard img.school-graph-icon.icon-h-big {
+        width: 150px;}
+}
