Add sticky  search filter

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -640,6 +640,75 @@ ul {
     }
 }
 
+@media screen and (max-width:768px) {
+    .tab-for-graph .w-20 {
+        min-width: 150px;
+    }
+    .right-card-sec .card-box-impact .impact-box-content-education{padding: 15px;}
+    .filter_drodown{width: 100%;
+    padding:1px 12px 10px;
+    min-height: 60px;
+    }
+    .filter_drodown .select-box.from-control li.nav-item.position-static{padding: 0px 16px;}
+    .select-box.from-control ul.navbar-nav {
+        flex-direction: row;
+    }
+    .filter_drodown .filter-content h6 {
+        white-space: nowrap;
+        font-size: 14px;
+    }
+    .filter_drodown .select-box.from-control li.nav-item.position-static:first-child {
+        margin-right: 10px;
+    }
+    .filter_drodown .select-box.from-control a.dropdown-toggle.nav-link {
+        font-size: 14px;
+    }
+    .select-box.from-control .container-fluid {
+        padding-right: 0;
+    }
+    .close_map_sec .map_hide_on_click_btn, .close_map_sec.main-card-home:after, .close_map_sec.main-card-home:before{display: none;}
+
+    .heading-blue {
+        font-size: 1.5em;
+    }
+    .right-card-sec .srid-card-se .card-box .sub-text-c {
+        font-size: 12px;
+    }
+    .right-card-sec .srid-card-se .card-box .main-text-c.m-big {
+        font-size: 18px;
+        letter-spacing: 0;
+    }
+    .right-card-sec .srid-card-se .card-box img.card-img {
+        width: 80px;
+        height: 62px;
+        bottom: -2px;
+    }
+    .right-card-sec .srid-card-se .card-box .main-text-c{font-weight: 500;}
+    .heading-sm {font-size: 1.2em;line-height: 1.5;}
+    .map-main-card .close-map-btn{top: 40px;}
+    .close_map_sec button.header-dropdown-btn.open-map-btn {
+        display: block;
+        position: relative; 
+        padding: 12px 18px;
+        font-size: 14px;
+        width: 150px;
+        left: -50px;
+    }
+    .right-card-sec .card-box-impact .impact-box-content-education .heading-sm {
+        font-size: 16px;
+    }
+    .open_map_sec .map-sec-h {
+        width: 100%;
+    }
+    .tab-for-graph .nav-tabs .nav-link{margin-bottom: 6px;}
+    .filter_drodown ul.dropdown-menu.show.animation {
+        width: 300px !important;
+    }
+
+
+
+}
+
 @media (max-width: 991px) and (min-width:768px) {
 
     .container,
@@ -873,6 +942,13 @@ ul {
     .tab-for-graph .nav-tabs .nav-link {
         margin-bottom: 10px;
     }
+
+    .filter_drodown ul.dropdown-menu.show.animation{transform: translate(-68%, -28%) !important;}
+
+    .filter_drodown .select-box.from-control li.nav-item.position-static:first-child ul.dropdown-menu.show.animation {
+        transform: translate(-37.58%, -28%) !important;
+    }
+
 }
 
 @media (max-width:1350px) and (min-width: 1024px) {
@@ -880,7 +956,10 @@ ul {
     .site-header {
         top: 32px;
     }
-
+    .filter_drodown ul.dropdown-menu.show.animation{transform: translate(-68%, -28%) !important;}
+    .filter_drodown .select-box.from-control li.nav-item.position-static:first-child ul.dropdown-menu.show.animation {
+        transform: translate(-37.58%, -28%) !important;
+    }
     .header-top-skipwrap ul li a,
     .header-top-skipwrap ul li span.text {
         font-size: 0.7em !important;
