--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -461,8 +461,10 @@ button.header-dropdown-btn.open-map-btn {
     background: #2c2c2c;
     z-index: 99999;
     position: fixed;
+    left: 50%;
     bottom: 0;
-    width: 30%;
+    transform: translate(-50%, 10px);
+    width: 500px;
     color: #fff;
     border-radius: 10px 10px 0 0;
     min-height: 100px;
@@ -478,10 +480,10 @@ button.header-dropdown-btn.open-map-btn {
     }
 
     ul.dropdown-menu.show.animation {
-        width: 570px !important;
+        width: 500px !important;
         left: 0px !important;
         border-radius: 10px 10px 0 0 !important;
-        transform: translate(-71.722%, -28%) !important;
+        transform: translate(-68.5%, -28%) !important;
         background: #2c2c2c;
         border-bottom: 2px solid #fff;
         transition: all 0.5s ease-in-out;
@@ -508,7 +510,12 @@ button.header-dropdown-btn.open-map-btn {
 
     .select-box.from-control {
 
-        li.nav-item.position-static:first-child{margin-right: 20px;}
+        li.nav-item.position-static:first-child{
+            margin-right: 20px;
+
+            ul.dropdown-menu.show.animation{ transform: translate(-38%, -28%) !important;}
+
+        }
         
         li.nav-item.position-static {
             border-radius: 50px;
@@ -528,8 +535,23 @@ button.header-dropdown-btn.open-map-btn {
                 color: #000;
             }
         }
+    }
 
+    ul.dropdown-menu.show.animation:after {
+        content: '';
+        border-top:20px solid #faf6ed;
+        border-left: 20px solid transparent;
+        border-right: 20px solid transparent;
+        bottom: 0;
+        position: absolute;
+        right: 17%;
+        transform: translate(-20%, 20px);
+    }
 
+    .select-box.from-control li.nav-item.position-static:first-child ul.dropdown-menu.show.animation:after{
+        left: 45.5%;
+        right: auto;
+        transform: translate(-45%, 20px);
     }
 
 }
