--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -34,6 +34,8 @@
                 }
 
                 &:first-child {
+                    padding-left: 0;
+                    
                     @media (max-width: 991px) {
                         padding-left: 0;
                     }
