--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,6 +11,8 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     overflow-x: hidden;
+    min-height: 100vh;
+    background: #F7F7F7
 }
 
 a {
@@ -644,63 +646,101 @@ ul {
     .tab-for-graph .w-20 {
         min-width: 150px;
     }
-    .right-card-sec .card-box-impact .impact-box-content-education{padding: 15px;}
-    .filter_drodown{width: 100%;
-    padding:1px 12px 10px;
-    min-height: 60px;
+
+    .right-card-sec .card-box-impact .impact-box-content-education {
+        padding: 15px;
     }
-    .filter_drodown .select-box.from-control li.nav-item.position-static{padding: 0px 16px;}
+
+    .filter_drodown {
+        width: 100%;
+        padding: 1px 12px 10px;
+        min-height: 60px;
+    }
+
+    .filter_drodown .select-box.from-control li.nav-item.position-static {
+        padding: 0px 16px;
+    }
+
     .select-box.from-control ul.navbar-nav {
         flex-direction: row;
     }
+
     .filter_drodown .filter-content h6 {
         white-space: nowrap;
         font-size: 14px;
     }
+
     .filter_drodown .select-box.from-control li.nav-item.position-static:first-child {
         margin-right: 10px;
     }
+
     .filter_drodown .select-box.from-control a.dropdown-toggle.nav-link {
         font-size: 14px;
     }
+
     .select-box.from-control .container-fluid {
         padding-right: 0;
     }
-    .close_map_sec .map_hide_on_click_btn, .close_map_sec.main-card-home:after, .close_map_sec.main-card-home:before{display: none;}
+
+    .close_map_sec .map_hide_on_click_btn,
+    .close_map_sec.main-card-home:after,
+    .close_map_sec.main-card-home:before {
+        display: none;
+    }
 
     .heading-blue {
         font-size: 1.5em;
     }
+
     .right-card-sec .srid-card-se .card-box .sub-text-c {
         font-size: 12px;
     }
+
     .right-card-sec .srid-card-se .card-box .main-text-c.m-big {
         font-size: 18px;
         letter-spacing: 0;
     }
+
     .right-card-sec .srid-card-se .card-box img.card-img {
         width: 80px;
         height: 62px;
         bottom: -2px;
     }
-    .right-card-sec .srid-card-se .card-box .main-text-c{font-weight: 500;}
-    .heading-sm {font-size: 1.2em;line-height: 1.5;}
-    .map-main-card .close-map-btn{top: 40px;}
+
+    .right-card-sec .srid-card-se .card-box .main-text-c {
+        font-weight: 500;
+    }
+
+    .heading-sm {
+        font-size: 1.2em;
+        line-height: 1.5;
+    }
+
+    .map-main-card .close-map-btn {
+        top: 40px;
+    }
+
     .close_map_sec button.header-dropdown-btn.open-map-btn {
         display: block;
-        position: relative; 
+        position: relative;
         padding: 12px 18px;
         font-size: 14px;
         width: 150px;
         left: -50px;
     }
+
     .right-card-sec .card-box-impact .impact-box-content-education .heading-sm {
         font-size: 16px;
     }
+
     .open_map_sec .map-sec-h {
         width: 100%;
     }
-    .tab-for-graph .nav-tabs .nav-link{margin-bottom: 6px;}
+
+    .tab-for-graph .nav-tabs .nav-link {
+        margin-bottom: 6px;
+    }
+
     .filter_drodown ul.dropdown-menu.show.animation {
         width: 300px !important;
     }
@@ -906,6 +946,7 @@ ul {
     display: block !important;
 }
 
+.bg-grey2{background: #f2f2f2;}
 
 @media (min-width: 1600px) {
 
@@ -928,11 +969,12 @@ ul {
 }
 
 @media (max-width:1599px) and (min-width: 1351px) {
+    body{font-size: 14px;}
     button.header-dropdown-btn.open-map-btn {
-        padding: 17px 18px;
-        font-size: 14px;
+        padding: 10px 18px;
+        font-size: 12px;
         top: 0;
-        left: -70px;
+        left: -90px;
     }
 
     .close_map_sec .card-box-impact.tab-for-graph .impact-box-content-education {
@@ -943,23 +985,34 @@ ul {
         margin-bottom: 10px;
     }
 
-    .filter_drodown ul.dropdown-menu.show.animation{transform: translate(-68%, -28%) !important;}
+    .filter_drodown ul.dropdown-menu.show.animation {
+        transform: translate(-68.82%, -28.1%) !important;
+    }
 
     .filter_drodown .select-box.from-control li.nav-item.position-static:first-child ul.dropdown-menu.show.animation {
-        transform: translate(-37.58%, -28%) !important;
+        transform: translate(-38.3%, -28.2%) !important;
     }
+    .logo-wrap a.top-logo img {
+        width: 235px;
+    }
+
 
 }
 
 @media (max-width:1350px) and (min-width: 1024px) {
-
+    body{font-size: 12px;}
     .site-header {
         top: 32px;
     }
-    .filter_drodown ul.dropdown-menu.show.animation{transform: translate(-68%, -28%) !important;}
+
+    .filter_drodown ul.dropdown-menu.show.animation {
+        transform: translate(-68%, -28%) !important;
+    }
+
     .filter_drodown .select-box.from-control li.nav-item.position-static:first-child ul.dropdown-menu.show.animation {
         transform: translate(-37.58%, -28%) !important;
     }
+
     .header-top-skipwrap ul li a,
     .header-top-skipwrap ul li span.text {
         font-size: 0.7em !important;
@@ -974,7 +1027,7 @@ ul {
         padding: 10px 12px;
     }
 
-    .logo-wrap a img {
+    .logo-wrap a.top-logo img {
         width: 200px;
     }
 
@@ -983,7 +1036,7 @@ ul {
     }
 
     .menu-switch-tab .nav-tabs .nav-link {
-        font-size: 12px;
+        font-size: 12px !important;
         padding: 7px 10px;
     }
 
@@ -1068,6 +1121,7 @@ ul {
     .right-card-sec .srid-card-se.school-dashboard img.school-graph-icon.icon-h-big {
         width: 150px;
     }
+
     button.header-dropdown-btn.open-map-btn {
         padding: 8px 11px;
         font-size: 12px;
@@ -1075,7 +1129,7 @@ ul {
         left: -95px;
     }
 
-    .close_map_sec{
+    .close_map_sec {
         .right-card-sec .srid-card-se .card-box img.card-img {
             position: absolute;
             width: 100px;
@@ -1090,3 +1144,14 @@ ul {
     }
 
 }
+
+a{text-decoration: none;}
+
+table tr th{
+    background: #FAF6ED;
+}
+table tr td{
+    background: #fff;
+}
+
+.form-control:focus{border-color:transparent !important; box-shadow: none !important;}
