--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -228,22 +228,22 @@
             height: 14px;
             width: 14px;
         }
-
-        button.close-btn {
-            background: #ffffff;
-            height: 35px;
-            width: 35px;
-            border: 1px solid #dadada;
-            border-radius: 50px;
-            font-size: 10px;
-            color: #000000;
-            font-weight: 600;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+       
 
     }
 
+    button.close-btn {
+        background: #ffffff !important;
+        height: 35px !important;
+        width: 35px !important;
+        border: 1px solid #dadada !important;
+        border-radius: 50px !important;
+        font-size: 10px !important;
+        color: #000000 !important;
+        font-weight: 600 !important;
+        display: flex !important;
+        align-items: center !important;
+        justify-content: center !important;
+    }
 
 }
