--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -464,7 +464,7 @@ button.header-dropdown-btn.open-map-btn {
     left: 50%;
     bottom: 2%;
     transform: translate(-50%, 10px);
-    width: 500px;
+    width: 530px;
     color: #fff;
     border-radius: 0 0 10px 10px;
     padding: 6px;
@@ -477,13 +477,15 @@ button.header-dropdown-btn.open-map-btn {
         justify-content: space-between;
         width: 100%;
         background: #222;
-        padding: 10px 15px;
+        padding: 10px;
         border-radius: 10px;
 
         h6{
-            background: #5555556e;
-            padding: 12px 15px;
+            background: rgb(62 62 62 / 43%);
+            padding: 10px 10px;
             border-radius: 5px;
+            white-space: nowrap;
+            font-size: 14px;
         }
     }
 @keyframes smooth {
@@ -496,21 +498,24 @@ opacity: 1;
     
 }
     ul.dropdown-menu.show.animation {
-        width: 500px !important;
+        width: 530px !important;
         left: 0px !important;
         border-radius: 10px 10px 0 0 !important;
         // transform: translate(-68.5%, -28%) !important;
-        transform: translate(-69.2%, -28.3%) !important;
+        transform: translate(-51.5%, -22.6%) !important;
         background: rgba(34, 34, 34, 0.8); 
         /* border-bottom: 2px solid #fff; */
         transition: all 0.5s ease-in-out;
         padding: 5px;
         animation: smooth .5s ease-in-out;
+        z-index: 9999999;
 
         .droplist{
             background: #222;
             padding: 10px 12px;
             border-radius: 10px 10px 0 0 !important;
+            height: 300px;
+            overflow-x: auto;
         }
     }
 
@@ -536,19 +541,27 @@ opacity: 1;
     .select-box.from-control {
 
         li.nav-item.position-static:first-child{
-            margin-right: 20px;
+            margin-right: 0px;
 
             ul.dropdown-menu.show.animation{ 
-                // transform: translate(-38%, -28%) !important;
-                transform: translate(-38.8%, -28.3%) !important;
+                transform: translate(-27.9%, -22.5%) !important;
+            }
+
+        }
+        li.nav-item.position-static:last-child{
+            margin-right: 0px;
+
+            ul.dropdown-menu.show.animation{ 
+                transform: translate(-75.5%, -22.5%) !important;
             }
 
         }
         
         li.nav-item.position-static {
             border-radius: 50px;
-            padding: 0px 25px;
-            background: #fff;            
+            padding: 0px 18px;
+            background: #fff;       
+            margin-left: 8px;     
         }
         a.dropdown-toggle.nav-link {
             padding: 5px 0;
@@ -583,5 +596,24 @@ opacity: 1;
         transform: translate(-45%, 20px);
         display: none;
     }
+
+    /* width */
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
 
 }
