Create Infra report 3013 page

--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -137,6 +137,7 @@
             color: #212121 !important;
             font-weight: 600 !important;
             padding: 12px 15px !important;
+            white-space: nowrap;
         }
 
         .text-blue {
