Create header brudcrum and report page

--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -527,6 +527,7 @@ opacity: 1;
         background: transparent;
         color: #fff;
         padding: 12px 0px;
+        cursor: pointer;
     }
 
     .list-group-item:first-child {
