--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -998,3 +998,16 @@ button.text-increment-btn {
     .menu-switch-tab .nav-tabs .nav-item:not(:last-child){margin-bottom: 8px;}
 
 }
+
+.title-brd {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    span.internalpagename {
+        background: #113689;
+        color: #fff;
+        padding: 10px 15px 10px 18px;
+        border-radius: 25px;
+    }
+}
