implemented ag-grid

--- a/src/components/Report/report.scss
+++ b/src/components/Report/report.scss
@@ -332,3 +332,20 @@
 th.report-name-width-50 {
     width: 70%;
 }
+
+.ag-theme-custom-height{
+    // height: 600px;
+    margin-top:25px;
+}
+
+.ag-header-row.ag-header-row-column {
+    background: #FAF6ED;
+    border-color: #e0e0e0;
+    color: #212121 !important;
+    font-weight: 600 !important;
+    padding: 12px 15px !important;
+    white-space: nowrap;
+    font-size: 0.875rem;
+}
+
+
